[gd_scene load_steps=9 format=3 uid="uid://12jmdvu1jwim"]

[ext_resource type="Script" uid="uid://bv1d4tq2qulb6" path="res://UI/ui.gd" id="1_hat8c"]
[ext_resource type="PackedScene" uid="uid://cys0c04r4eedc" path="res://Scenes/ui_upgrade.tscn" id="2_3sbvi"]
[ext_resource type="PackedScene" uid="uid://c6nbnwaqlkj43" path="res://UI/death_menu.tscn" id="3_nm1m0"]
[ext_resource type="PackedScene" uid="uid://dagq5n6bqn3fv" path="res://UI/pause_menu.tscn" id="4_c7tqi"]

[sub_resource type="Gradient" id="Gradient_jkdf5"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.165656, 0.165656, 0.165656, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wsu2k"]
gradient = SubResource("Gradient_jkdf5")
width = 1

[sub_resource type="Gradient" id="Gradient_k12tt"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0.752941, 0, 0.654902)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h1bgf"]
gradient = SubResource("Gradient_k12tt")
width = 1

[node name="UI" type="CanvasLayer"]
process_mode = 3
visible = false
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)
script = ExtResource("1_hat8c")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UpgradePanel" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Control" parent="Control/UpgradePanel"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/UpgradePanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=50]Upgrades!"
fit_content = true
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeContainer" type="HBoxContainer" parent="Control/UpgradePanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 2
alignment = 1

[node name="Upgrade" parent="Control/UpgradePanel/UpgradeContainer" instance=ExtResource("2_3sbvi")]
layout_mode = 2

[node name="Upgrade2" type="Panel" parent="Control/UpgradePanel/UpgradeContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Upgrade3" type="Panel" parent="Control/UpgradePanel/UpgradeContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="HUD" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HUD"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 2

[node name="TimerLabel" type="RichTextLabel" parent="Control/HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Control/HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2

[node name="Panel" type="ProgressBar" parent="Control/HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 2
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="Control/HUD/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -34.5
offset_right = 220.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[color=red][font_size=50]H:10/10"
fit_content = true
shortcut_keys_enabled = false
horizontal_alignment = 1

[node name="HSeparator" type="Control" parent="Control/HUD"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ExpBar" type="TextureProgressBar" parent="Control/HUD"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07
step = 0.01
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_wsu2k")
texture_progress = SubResource("GradientTexture1D_h1bgf")

[node name="DeathMenu" parent="Control" instance=ExtResource("3_nm1m0")]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="PauseMenu" parent="Control" instance=ExtResource("4_c7tqi")]
visible = false
layout_mode = 1
anchors_preset = -1
mouse_filter = 2

[editable path="Control/DeathMenu"]
